add story headlines/photos and nav bar at top

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id="title">Welcome to Ember</h2>
+<div class="navbar-header">
+  <header>
+    <a href="/" class="navbar-brand">Bustle</a>
+  </header>
+</div><br>
 
-{{outlet}}
+<hr>
+<div class="container">
+  {{outlet}}
+</div>
