--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <ul>
   {{#each model as |story|}}
-    <!-- <li>{{story-tile story=story}}</li> -->
-    <li>{{story.headline}}<br><img src={{story.image}} class="front-page-img"></li>
+    <li>{{story-tile story=story}}</li>
+    
   {{/each}}
 </ul>
