--- a/app/templates/components/single-story.hbs
+++ b/app/templates/components/single-story.hbs
@@ -1,7 +1,7 @@
 <h3>{{story.headline}}</h3>
 <div id="container" class=singlePage>
 
-<img class="front-page-img" src={{story.image}}><br>
+<img class="story-img" src={{story.image}}><br>
 <div class="container">
   {{story.text}}<br>
 </div>
