--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,22 @@
-<ul>
-  {{#each model as |story|}}
-    <li>{{story-tile story=story}}</li>
-    
-  {{/each}}
-</ul>
+{{#carousel-container transition-interval=400}}
+  {{#carousel-body}}
+    {{#each model as |story|}}
+      {{#carousel-item}}
+        {{story-tile story=story}}
+      {{/carousel-item}}
+    {{/each}}
+  {{/carousel-body}}
+
+  {{#carousel-arrow direction="left"}}
+  <a class="left carousel-control" href="#" role="button">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  {{/carousel-arrow}}
+  {{#carousel-arrow direction="right"}}
+  <a class="right carousel-control" href="#" role="button">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  {{/carousel-arrow}}
+{{/carousel-container}}
